--- a/templates/Search/index.html.twig
+++ b/templates/Search/index.html.twig
@@ -15,7 +15,7 @@
         <ul class="media-list content-group">
             <li class="media panel panel-body">
                 <div class="text-center text-muted">
-                    {{ heroicon('exclamation-triangle', 'w-8 h-8') }}
+                    {{ ux_icon('heroicons:exclamation-triangle', {'class': 'w-8 h-8'}) }}
                     <p class="mt-10">{{ error }}</p>
                 </div>
             </li>
@@ -24,7 +24,7 @@
         <ul class="media-list content-group">
             <li class="media panel panel-body">
                 <div class="text-center text-muted">
-                    {{ heroicon('magnifying-glass', 'w-8 h-8') }}
+                    {{ ux_icon('heroicons:magnifying-glass', {'class': 'w-8 h-8'}) }}
                     <p class="mt-10">{{ 'search_index.noResult'|trans() }}</p>
                 </div>
             </li>
