--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,5 @@
 <div class="footer text-muted">
     2017-{{ 'now'|date('Y') }}.
-    Crafted with {{ heroicon('heart', 'w-6 h-6', 'solid') }} by French coaster enthusiasts.
+    Crafted with {{ ux_icon('heroicons-solid:heart', {'class': 'w-6 h-6'}) }} by French coaster enthusiasts.
     <a href="{{ path('app_terms_conditions') }}">{{ 'title'|trans([], 'policy') }}</a>
 </div>
