--- a/templates/page_header.html.twig
+++ b/templates/page_header.html.twig
@@ -29,12 +29,12 @@
                      aria-autocomplete="list"
                      aria-haspopup="listbox">
               <div class="form-control-feedback">
-                {{ heroicon('magnifying-glass', 'w-6 h-6 text-size-small text-muted search-icon') }}
+                {{ ux_icon('heroicons:magnifying-glass', {'class': 'w-6 h-6 text-size-small text-muted search-icon'}) }}
                 <button type="button" 
                         class="search-clear-button" 
                         data-action="click->search#clearSearch"
                         aria-label="Clear search">
-                  {{ heroicon('x-mark', 'w-6 h-6 text-size-small text-muted') }}
+                  {{ ux_icon('heroicons:x-mark', {'class': 'w-6 h-6 text-size-small text-muted'}) }}
                 </button>
               </div>
             </div>
