--- a/templates/Top/list.html.twig
+++ b/templates/Top/list.html.twig
@@ -17,7 +17,7 @@
               </div>
               <div class="media-body">
                 <h6 class="text-semibold no-margin">
-                  {% if top.main %}{{ heroicon('check', 'w-6 h-6 text-size-mini position-left') }}{% endif %}
+                  {% if top.main %}{{ ux_icon('heroicons:check', {'class': 'w-6 h-6 text-size-mini position-left'}) }}{% endif %}
                   <a href="{{ path('top_show', {'id': top.id}) }}" class="text-default">
                     {{ top.name }}
                   </a>
@@ -43,13 +43,13 @@
             </ul>
             <div class="media">
               <a href="{{ path('top_show', {'id': top.id}) }}">
-                {{ heroicon('arrow-right-circle', 'w-6 h-6') }} {{ 'list.more'|trans({}, 'top') }}
+                {{ ux_icon('heroicons:arrow-right-circle', {'class': 'w-6 h-6'}) }} {{ 'list.more'|trans({}, 'top') }}
               </a>
             </div>
             <ul class="list-inline media">
-              <li>{{ heroicon('square-3-stack-3d', 'w-6 h-6 position-left') }} {{ top.topCoasters|length }}</li>
+              <li>{{ ux_icon('heroicons:square-3-stack-3d', {'class': 'w-6 h-6 position-left'}) }} {{ top.topCoasters|length }}</li>
               <li>
-                {{ heroicon('clock', 'w-6 h-6 position-left') }} {{ 'list.updated'|trans({}, 'top') }} {{ top.updatedAt|ago }}
+                {{ ux_icon('heroicons:clock', {'class': 'w-6 h-6 position-left'}) }} {{ 'list.updated'|trans({}, 'top') }} {{ top.updatedAt|ago }}
               </li>
             </ul>
           </div>
