--- a/templates/User/tops.html.twig
+++ b/templates/User/tops.html.twig
@@ -9,7 +9,7 @@
   <div class="panel panel-body stack-media-on-mobile">
     <div class="media-left">
       <a href="#" class="btn btn-link btn-icon text-teal">
-        {{ heroicon('clipboard', 'w-8 h-8 no-edge-top') }}
+        {{ ux_icon('heroicons:clipboard', {'class': 'w-8 h-8 no-edge-top'}) }}
       </a>
     </div>
     <div class="media-body media-middle">
@@ -17,7 +17,7 @@
       {{ 'list.info'|trans({}, 'top') }}
     </div>
     <div class="media-right media-middle">
-      <a href="{{ path('top_new') }}" class="btn bg-teal-400 btn-lg">{{ heroicon('plus', 'w-6 h-6 position-left') }}
+      <a href="{{ path('top_new') }}" class="btn bg-teal-400 btn-lg">{{ ux_icon('heroicons:plus', {'class': 'w-6 h-6 position-left'}) }}
         {% if tops|length == 0 %}{{ 'list.create_first'|trans({}, 'top') }}{% else %}{{ 'list.create'|trans({}, 'top') }}{% endif %}
       </a>
     </div>
@@ -34,7 +34,7 @@
               </div>
               <div class="media-body">
                 <h6 class="text-semibold no-margin">
-                  {% if top.main %}{{ heroicon('check', 'w-6 h-6 text-size-mini position-left') }}{% endif %}
+                  {% if top.main %}{{ ux_icon('heroicons:check', {'class': 'w-6 h-6 text-size-mini position-left'}) }}{% endif %}
                   <a href="{{ path('top_show', {'id': top.id}) }}" class="text-default">
                     {{ top.name }}
                   </a>
@@ -58,13 +58,13 @@
             </ul>
             <div class="media">
               <a href="{{ path('top_show', {'id': top.id}) }}">
-                {{ heroicon('arrow-right-circle', 'w-6 h-6') }} {{ 'list.more'|trans({}, 'top') }}
+                {{ ux_icon('heroicons:arrow-right-circle', {'class': 'w-6 h-6'}) }} {{ 'list.more'|trans({}, 'top') }}
               </a>
             </div>
             <ul class="list-inline media">
-              <li>{{ heroicon('square-3-stack-3d', 'w-6 h-6 position-left') }} {{ top.topCoasters|length }}</li>
+              <li>{{ ux_icon('heroicons:square-3-stack-3d', {'class': 'w-6 h-6 position-left'}) }} {{ top.topCoasters|length }}</li>
               <li>
-                {{ heroicon('clock', 'w-6 h-6 position-left') }} {{ 'list.updated'|trans({}, 'top') }} {{ top.updatedAt|ago }}
+                {{ ux_icon('heroicons:clock', {'class': 'w-6 h-6 position-left'}) }} {{ 'list.updated'|trans({}, 'top') }} {{ top.updatedAt|ago }}
               </li>
             </ul>
           </div>
