--- a/templates/helper.html.twig
+++ b/templates/helper.html.twig
@@ -25,14 +25,14 @@
         <span class="badge badge-flat border-warning-600 text-warning-600">new</span>
     {% elseif coaster.previousRank < coaster.rank %}
         <span class="badge badge-flat border-danger-600 text-danger-600">
-      {{ heroicon('arrow-down', 'w-6 h-6') }} {{ (coaster.rank - coaster.previousRank)|abs }}
+      {{ ux_icon('heroicons:arrow-down', {'class': 'w-6 h-6'}) }} {{ (coaster.rank - coaster.previousRank)|abs }}
     </span>
     {% elseif coaster.previousRank > coaster.rank %}
         <span class="badge badge-flat border-success-600 text-success-600">
-      {{ heroicon('arrow-up', 'w-6 h-6') }} {{ (coaster.rank - coaster.previousRank)|abs }}
+      {{ ux_icon('heroicons:arrow-up', {'class': 'w-6 h-6'}) }} {{ (coaster.rank - coaster.previousRank)|abs }}
     </span>
     {% elseif coaster.previousRank == coaster.rank %}
-        <span class="badge badge-flat border-primary-600 text-primary-600">{{ heroicon('arrow-right', 'w-6 h-6') }}</span>
+        <span class="badge badge-flat border-primary-600 text-primary-600">{{ ux_icon('heroicons:arrow-right', {'class': 'w-6 h-6'}) }}</span>
     {% endif %}
 {% endmacro %}
 
@@ -43,11 +43,11 @@
             {% set fullStars = rating|round(0, 'floor') %}
             
             {% for i in 1..fullStars %}
-                {{ heroicon('star', 'w-6 h-6', 'solid') }}
+                {{ ux_icon('heroicons-solid:star', {'class': 'w-6 h-6'}) }}
             {% endfor %}
             
             {% if (rating - fullStars) >= 0.5 %}
-                {{ heroicon('star-half', 'w-6 h-6') }}
+                {{ ux_icon('half-star', {'class': 'w-6 h-6'}) }}
             {% endif %}
         </span>
     </span>
