--- a/templates/ranking/info.html.twig
+++ b/templates/ranking/info.html.twig
@@ -5,12 +5,12 @@
       {% set nextRankingDate = 'now'|date_modify('first day of next month midnight 1 minute') %}
       {% if nextRankingDate|date('U') - 'now'|date('U') > 7200 %}
         <span class="heading-text text-muted">
-          {{ heroicon('clock', 'w-6 h-6 text-warning position-left') }}
+          {{ ux_icon('heroicons:clock', {'class': 'w-6 h-6 text-warning position-left'}) }}
           {{ 'coaster_ranking.info.next'|trans({'%date%': nextRankingDate|ago}) }}
           </span>
       {% endif %}
       <span class="heading-text text-muted">
-          {{ heroicon('plus', 'w-6 h-6 text-warning position-left') }}
+          {{ ux_icon('heroicons:plus', {'class': 'w-6 h-6 text-warning position-left'}) }}
           <a class="text-muted" href="{{ path('ranking_learn_more') }}">{{ 'coaster_ranking.info.learn_more'|trans() }}</a>
         </span>
     </div>
@@ -19,7 +19,7 @@
     <div class="col-xs-3">
       <div class="content-group">
         <h6 class="text-semibold no-margin">
-          {{ heroicon('chat-bubble-left', 'w-6 h-6 position-left text-slate') }}<br/>{{ ranking.rankedCoasterNumber }}&nbsp;
+          {{ ux_icon('heroicons:chat-bubble-left', {'class': 'w-6 h-6 position-left text-slate'}) }}<br/>{{ ranking.rankedCoasterNumber }}&nbsp;
           {% if ranking.rankedCoasterNumber - previousRanking.rankedCoasterNumber > 0 %}
             <span class="badge bg-blue-400">+{{ ranking.rankedCoasterNumber - previousRanking.rankedCoasterNumber }}</span>
           {% endif %}
@@ -31,7 +31,7 @@
     <div class="col-xs-3">
       <div class="content-group">
         <h6 class="text-semibold no-margin">
-          {{ heroicon('star', 'w-6 h-6 position-left text-slate') }}<br/>{{ ranking.ratingNumber|shortNum }}&nbsp;
+          {{ ux_icon('heroicons:star', {'class': 'w-6 h-6 position-left text-slate'}) }}<br/>{{ ranking.ratingNumber|shortNum }}&nbsp;
           {% if ranking.ratingNumber - previousRanking.ratingNumber > 1000 %}
             <span class="badge bg-blue-400">+{{ (ranking.ratingNumber - previousRanking.ratingNumber)|shortNum }}</span>
           {% endif %}
@@ -42,7 +42,7 @@
     <div class="col-xs-3">
       <div class="content-group">
         <h6 class="text-semibold no-margin">
-          {{ heroicon('user-group', 'w-6 h-6 position-left text-slate') }}<br/>{{ ranking.userNumber }}&nbsp;
+          {{ ux_icon('heroicons:user-group', {'class': 'w-6 h-6 position-left text-slate'}) }}<br/>{{ ranking.userNumber }}&nbsp;
           {% if ranking.userNumber - previousRanking.userNumber > 0 %}
             <span class="badge bg-blue-400">+{{ ranking.userNumber - previousRanking.userNumber }}</span>
           {% endif %}
@@ -53,7 +53,7 @@
     <div class="col-xs-3">
       <div class="content-group">
         <h6 class="text-semibold no-margin">
-          {{ heroicon('arrows-right-left', 'w-6 h-6 position-left text-slate') }}<br/>{{ ranking.comparisonNumber|shortNum }}&nbsp;
+          {{ ux_icon('heroicons:arrows-right-left', {'class': 'w-6 h-6 position-left text-slate'}) }}<br/>{{ ranking.comparisonNumber|shortNum }}&nbsp;
           {% if ranking.comparisonNumber - previousRanking.comparisonNumber > 1000 %}
             <span class="badge bg-blue-400">+{{ (ranking.comparisonNumber - previousRanking.comparisonNumber)|shortNum }}</span>
           {% endif %}
