--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,7 +6,7 @@
     <!-- Form with validation -->
     <div class="panel panel-body login-form">
         <div class="text-center mb-3">
-            <div class="icon-object border-warning-400 text-warning-400">{{ heroicon('key', 'w-6 h-6') }}</div>
+            <div class="icon-object border-warning-400 text-warning-400">{{ ux_icon('heroicons:key', {'class': 'w-6 h-6'}) }}</div>
             <h5 class="content-group-lg">{{ 'register.title'|trans }}
                 <small class="display-block">{{ 'register.subtitle'|trans }}</small>
             </h5>
